--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.http.multipart.max-request-size=100Mb
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 
 server.file.dir=C:/SC
+
+server.hostname=https://fanfan.skyable.cn
