--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 
 server.file.dir=C:/SC
 
-server.hostname=https://fanfan.skyable.cn
+server.hostname=https://fanfan.sandbox.skyable.cn
