--- a/pom.xml
+++ b/pom.xml
@@ -104,4 +104,26 @@
      </dependency> 
      
    </dependencies>
+   
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>1.4.2.RELEASE</version>
+         </plugin>
+      </plugins>
+      <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/webapp</directory>
+                <targetPath>META-INF/resources</targetPath>
+                <includes>
+                	<include>**/**</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
